# ai_trader

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AUTH_SETUP.md  BACKGROUND_SERVICE.md  CHANGELOG.md  CONTINUOUS_TRADING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.ci  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MODAL_IMPROVEMENTS.md  PRODUCTION_IMPROVEMENTS.md  QUICKSTART.md  README.md  REBALANCING.md  SELL_LOGIC_EXPLAINED.md  SERVICES.md  SP500_UPDATES.md  START_HERE.md  SYSTEM_TEST_REPORT.md  UPDATES.md  WEB_DASHBOARD.md  ai-trader.logrotate  ai-trader.service  bot_control.sh  com.aitrader.bot.plist  deploy.sh  docker-compose.yml  entrypoint.sh  manage_positions.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  run.sh  (+8 more)
.github/workflows/: ci.yml
agents/: Jenny.md  claude-md-compliance-checker.md  code-quality-pragmatist.md  karen.md  task-completion-validator.md  ui-comprehensive-tester.md  ultrathink-debugger.md
backtesting/: optimization_study.py  optimization_study_fast.py  optimization_study_results.json  parameter_sweep.py  parameter_sweep_fast.py  quick_validation.py  validation_results.json  walkforward_backtest.py  walkforward_lite.py
config/: config.py
data/: performance_history.json  position_tracking.json  sp500_cache.json
data/cache/: news_AAPL_7d.json  news_ABBV_7d.json  news_AMZN_7d.json  news_BRK.B_7d.json  news_CVX_7d.json  news_GOOGL_7d.json  news_HD_7d.json  news_JNJ_7d.json  news_JPM_7d.json  news_KO_7d.json  news_MA_7d.json  news_META_7d.json  news_MRK_7d.json  news_MSFT_7d.json  news_NVDA_7d.json  news_PEP_7d.json  news_PG_7d.json  news_TSLA_7d.json  news_V_7d.json  news_WMT_7d.json
docs/: BACKTEST_ANALYSIS.md  OPTIMIZATION_STUDY.md
src/: __init__.py  auto_learner.py  clients.py  data_provider.py  executor.py  llm_reason_generator.py  logger.py  main.py  market_regime.py  metrics.py  newsapi_client.py  performance_tracker.py  position_sizer.py  position_tracker.py  risk_manager.py  secrets_manager.py  sentiment.py  strategy.py  strategy_optimizer.py  universe.py  watchdog.py
tests/: test_executor.py  test_integration.py  test_market_regime.py  test_position_sizer.py  test_risk_manager.py  test_sentiment.py  test_strategy.py
web/: dashboard.py
web/templates/: analysis.html  dashboard.html  grafana.html  login.html  metrics.html  optimizer.html  performance.html
