[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trader"
version = "1.0.0"
description = "AI-powered stock trading system with sentiment analysis and technical indicators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Trader Team", email = "team@ai-trader.local"}
]
keywords = [
    "trading",
    "stocks",
    "ai",
    "machine-learning",
    "sentiment-analysis",
    "alpaca",
    "fintech",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "alpaca-py>=0.21.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "pandas-ta>=0.3.14b0",
    "transformers>=4.36.0",
    "torch>=2.1.2",
    "flask>=3.0.0",
    "schedule>=1.2.0",
    "pydantic>=2.5.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
]

[project.scripts]
ai-trader = "src.main:main"

[project.urls]
Homepage = "https://github.com/ekl254/ai_trader"
Repository = "https://github.com/ekl254/ai_trader"
Documentation = "https://github.com/ekl254/ai_trader#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["src", "config"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "C901",   # too complex
    "RUF012", # mutable class attributes (false positives with dataclasses)
    "RUF015", # prefer next() over [0] - not always clearer
    "SIM102", # nested if - sometimes clearer to keep separate
    "SIM108", # ternary operator - not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "F841", "RUF059"]
"__init__.py" = ["F401"]
"src/main.py" = ["T201"]  # CLI needs print statements
"web/dashboard.py" = ["T201", "RUF001"]  # CLI startup messages, unicode chars
"backtesting/*" = ["T201", "E402", "F401", "UP035", "N803", "N806", "E722", "B007", "B905", "F841", "RUF013", "RUF059"]  # Scripts with imports after sys.path
"manage_positions.py" = ["T201", "RUF001"]  # CLI utility
"status.py" = ["T201"]  # CLI utility

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "transformers.*",
    "torch.*",
    "alpaca.*",
    "pandas_ta.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
